# calc_interview

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  calculatormodel.cpp  calculatormodel.h  error.h  main.cpp
src/: calc.h  calculatormodel.cpp  calculatormodel.h  error.cpp  error.h  main.cpp  token.h  var_resolver.cpp  var_resolver.h
